--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.0.0",
+    "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-beta",
     "cross-env": "^5.2.0",
+    "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
-    "twilio-client": "^1.6.5"
+    "sass-loader": "^7.1.0",
+    "twilio-client": "^1.6.5",
+    "vue-loader": "^15.4.2",
+    "vue-stars": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
