--- a/package.json
+++ b/package.json
@@ -22,20 +22,26 @@
     "cross-env": "^5.2.0",
     "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
-    "sass-loader": "^7.1.0",
     "twilio-client": "^1.6.5",
     "vue-loader": "^15.4.2",
     "vue-stars": "^1.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/auth": "^4.5.3",
     "babel-eslint": "^8.2.1",
+    "babel-loader": "^8.0.4",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.11.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
     "prettier": "1.14.3",
+    "sass-loader": "^7.1.0",
+    "vue-loader": "^15.4.2",
+    "vue-stars": "^1.0.0",
     "vue-svg-loader": "^0.11.0"
   }
 }
